--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,7 +65,7 @@ services:
       - local
   scheduler:
     image: fnndsc/cube:next-3.0.0.a2.git.ba5ff6f
-    command: bash -c "rm -f /home/localuser/celerybeat.pid && celery -A core beat -l info --pidfile= --scheduler django_celery_beat.schedulers:DatabaseScheduler"
+    command: bash -c "celery -A core beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler"
     env_file: secrets.env
     environment:
       DJANGO_DB_MIGRATE: "off"
