Update and fix UIs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -189,15 +189,15 @@ services:
       org.chrisproject.role: "pman"
 
   chris_ui:
-    image: ghcr.io/fnndsc/chris_ui:20220630.2-b3051099
-    command: sirv --single
+    image: ghcr.io/fnndsc/chris_ui:20220630.2-2618ae10
+    command: sirv --host --single
     environment:
       REACT_APP_CHRIS_UI_URL: http://localhost:8000/api/v1/
     ports:
       - "8020:3000"
   chris_store_ui:
     image: ghcr.io/fnndsc/chris_store_ui:0.2.0
-    command: sirv --single
+    command: sirv --host --single
     environment:
       REACT_APP_STORE_URL: http://localhost:8010/api/v1/
     ports:
