--- a/secrets.env
+++ b/secrets.env
@@ -17,3 +17,4 @@ SWIFT_AUTH_URL=http://swift:8080/auth/v1.0
 SWIFT_USERNAME=chris:chris1234
 SWIFT_KEY=testing
 CELERY_BROKER_URL=amqp://queue:5672
+AUTH_LDAP=false
