--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - tools
   chris:
     container_name: chris
-    image: fnndsc/cube:3.0.0.a16
+    image: fnndsc/cube:3.0.0.a18
     ports:
       - "8000:8000"
     depends_on:
@@ -37,7 +37,7 @@ services:
       org.chrisproject.role: "ChRIS ultron backEnd"
       org.chrisproject.miniChRIS: "miniChRIS"
   worker:
-    image: fnndsc/cube:3.0.0.a16
+    image: fnndsc/cube:3.0.0.a18
     command: celery -A core worker -c 4 -l info -Q main1,main2
     env_file: secrets.env
     environment:
@@ -52,7 +52,7 @@ services:
     networks:
       - local
   worker_periodic:
-    image: fnndsc/cube:3.0.0.a16
+    image: fnndsc/cube:3.0.0.a18
     environment:
       DJANGO_DB_MIGRATE: "off"
       DJANGO_COLLECTSTATIC: "off"
@@ -65,7 +65,7 @@ services:
     networks:
       - local
   scheduler:
-    image: fnndsc/cube:3.0.0.a16
+    image: fnndsc/cube:3.0.0.a18
     command: celery -A core beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler
     env_file: secrets.env
     environment:
@@ -184,10 +184,11 @@ services:
       org.chrisproject.role: "pman"
 
   chris_ui:
-    image: fnndsc/chris_ui:20220720.56-8fe95ee5
+    image: fnndsc/chris_ui:20220907.91-24aa9823
     command: sirv --host --single
     environment:
       REACT_APP_CHRIS_UI_URL: http://localhost:8000/api/v1/
+      REACT_APP_PFDCM_URL: http://localhost:4005/api/v1/  # WARNING: not actually used atm.
     ports:
       - "8020:3000"
   chris_store_ui:
@@ -197,6 +198,31 @@ services:
       REACT_APP_STORE_URL: http://localhost:8010/api/v1/
     ports:
       - "8021:3000"
+
+  orthanc:
+    image: jodogne/orthanc-plugins:1.11.0
+    volumes:
+      - ./orthanc.json:/etc/orthanc/orthanc.json:ro
+      - orthanc:/var/lib/orthanc/db
+    ports:
+      - "4242:4242"
+      - "8042:8042"
+    networks:
+      - pacs
+
+  pfdcm:
+    image: fnndsc/pfdcm:2.8.2
+    # volumes:
+    command: /start-reload.sh
+    ports:
+      - "4005:4005"
+      - "10402:11113"
+      - "5555:5555"
+      - "10502:10502"
+      - "11113:11113"
+    networks:
+      - pacs
+      - local
 
   # ====================
   # Provisioning
@@ -212,12 +238,24 @@ services:
     userns_mode: "host"
     entrypoint: /entrypoint.sh
 
+  init-pfdcm:
+    image: curlimages/curl:7.85.0
+    volumes:
+      - ./workarounds/init_pfdcm.sh:/init_pfdcm.sh:ro
+    command: /init_pfdcm.sh
+    networks:
+      - pacs
+    profiles:
+      - tools
+
 networks:
   local:
   remote:
+  pacs:
 
 volumes:
   chris_db_data:
   chris_store_db_data:
   swift_storage:
   remote:
+  orthanc:
