--- a/secrets.env
+++ b/secrets.env
@@ -1,8 +1,8 @@
 DJANGO_SETTINGS_MODULE=config.settings.production
 DJANGO_ALLOWED_HOSTS=*
 DJANGO_SECRET_KEY=secret
-DJANGO_CORS_ORIGIN_ALLOW_ALL=true
-DJANGO_CORS_ORIGIN_WHITELIST=babymri.org
+DJANGO_CORS_ALLOW_ALL_ORIGINS=true
+DJANGO_CORS_ALLOWED_ORIGINS=https://babymri.org
 DJANGO_SECURE_PROXY_SSL_HEADER=
 DJANGO_USE_X_FORWARDED_HOST=false
 STATIC_ROOT=/home/localuser/mod_wsgi-0.0.0.0:8000/htdocs/static/
