--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,14 +93,14 @@ services:
 
   chris_store:
     container_name: chris_store
-    image: fnndsc/chris_store:2.1.0
+    image: fnndsc/chris_store:2.1.1
     environment:
       - DJANGO_DB_MIGRATE=on
       - DJANGO_SETTINGS_MODULE=config.settings.production
       - DJANGO_ALLOWED_HOSTS=*
       - DJANGO_SECRET_KEY=secret
-      - DJANGO_CORS_ORIGIN_ALLOW_ALL=true
-      - DJANGO_CORS_ORIGIN_WHITELIST=babymri.org
+      - DJANGO_CORS_ALLOW_ALL_ORIGINS=true
+      - DJANGO_CORS_ALLOWED_ORIGINS=https://babymri.org
       - DJANGO_SECURE_PROXY_SSL_HEADER=
       - DJANGO_USE_X_FORWARDED_HOST=false
       - DATABASE_HOST=chris_store_db
