--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -266,10 +266,72 @@ services:
     profiles:
       - tools
 
+  # ====================
+  # Monitoring
+  # ====================
+
+  grafana:
+    image: docker.io/grafana/grafana-oss:9.0.7
+    ports:
+      - 9009:3000
+    depends_on:
+      - chris_db
+      - prometheus
+    restart: unless-stopped
+    networks:
+      local:
+      monitoring:
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./grafana.ini:/etc/grafana/grafana.ini:ro
+  prometheus:
+    image: quay.io/prometheus/prometheus:v2.37.0
+    ports:
+     - 9090:9090
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    restart: unless-stopped
+    networks:
+      monitoring:
+    depends_on:
+      - cadvisor
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor:v0.45.0
+    ports:
+      - 9008:8080
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:ro
+      - /sys:/sys:ro
+      - /var/lib/docker:/var/lib/docker:ro
+      - /dev/disk/:/dev/disk/:ro
+    devices:
+      - /dev/kmsg
+    privileged: true
+    userns_mode: host
+    networks:
+      monitoring:
+    restart: unless-stopped
+#  loki:
+#    image: grafana/loki:2.6.1
+#    ports:
+#      - "9004:3100"
+#    command: -config.file=/etc/loki/local-config.yaml
+#    networks:
+#      monitoring:
+#      local:
+
+volumes:
+  chris_db_data:
+  chris_store_db_data:
+  remote:
+  provisioner-state:
+
 networks:
   local:
   remote:
   pacs:
+  monitoring:
 
 volumes:
   chris_db_data:
@@ -278,3 +340,4 @@ volumes:
   remote:
   orthanc:
   pfdcm:
+  grafana_data:
