--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - tools
   chris:
     container_name: chris
-    image: fnndsc/cube:3.0.0
+    image: fnndsc/cube:3.2.0
     ports:
       - "8000:8000"
     depends_on:
@@ -37,7 +37,7 @@ services:
       org.chrisproject.role: "ChRIS ultron backEnd"
       org.chrisproject.miniChRIS: "miniChRIS"
   worker:
-    image: fnndsc/cube:3.0.0
+    image: fnndsc/cube:3.2.0
     command: celery -A core worker -c 4 -l info -Q main1,main2
     env_file: secrets.env
     environment:
@@ -52,7 +52,7 @@ services:
     networks:
       - local
   worker_periodic:
-    image: fnndsc/cube:3.0.0
+    image: fnndsc/cube:3.2.0
     environment:
       DJANGO_DB_MIGRATE: "off"
       DJANGO_COLLECTSTATIC: "off"
@@ -65,7 +65,7 @@ services:
     networks:
       - local
   scheduler:
-    image: fnndsc/cube:3.0.0
+    image: fnndsc/cube:3.2.0
     command: celery -A core beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler
     env_file: secrets.env
     environment:
@@ -93,7 +93,7 @@ services:
 
   chris_store:
     container_name: chris_store
-    image: fnndsc/chris_store:2.1.1
+    image: fnndsc/chris_store:2.2.0
     environment:
       - DJANGO_DB_MIGRATE=on
       - DJANGO_SETTINGS_MODULE=config.settings.production
@@ -144,7 +144,7 @@ services:
 
   pfcon:
     container_name: pfcon
-    image: fnndsc/pfcon:5.0.0.a2
+    image: fnndsc/pfcon:5.0.0
     environment:
       COMPUTE_SERVICE_URL: http://pman:5010/api/v1/
       SECRET_KEY: secret
@@ -163,7 +163,7 @@ services:
       org.chrisproject.role: "pfcon"
 
   pman:
-    image: fnndsc/pman:4.0.0.a4
+    image: fnndsc/pman:4.0.0
     container_name: pman
     environment:
       CONTAINER_ENV: swarm
@@ -184,7 +184,7 @@ services:
       org.chrisproject.role: "pman"
 
   chris_ui:
-    image: fnndsc/chris_ui:20220921.102-b2487a06
+    image: fnndsc/chris_ui:20221012.113-a75c6319
     command: sirv --host --single
     environment:
       REACT_APP_CHRIS_UI_URL: http://localhost:8000/api/v1/
@@ -192,7 +192,7 @@ services:
     ports:
       - "8020:3000"
   chris_store_ui:
-    image: fnndsc/chris_store_ui:0.2.0
+    image: fnndsc/chris_store_ui:0.2.1
     command: sirv --host --single
     environment:
       REACT_APP_STORE_URL: http://localhost:8010/api/v1/
