feat: add grafana datasource for psql

--- a/grafana.ini
+++ b/grafana.ini
@@ -7,3 +7,16 @@ root_url = http://localhost:9009
 [security]
 admin_user = chris
 admin_password = chris1234
+
+datasources:
+  - name: Postgres
+    type: postgres
+    url: chris_db:5432
+    database: chris
+    user: chris
+    jsonData:
+      maxOpenConns: 0 # Grafana v5.4+
+      maxIdleConns: 2 # Grafana v5.4+
+      connMaxLifetime: 14400 # Grafana v5.4+
+    secureJsonData:
+      password: chris
