--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -284,6 +284,7 @@ services:
     volumes:
       - grafana_data:/var/lib/grafana
       - ./grafana.ini:/etc/grafana/grafana.ini:ro
+      - ./provisionaning:/etc/grafana/provisioning
   prometheus:
     image: quay.io/prometheus/prometheus:v2.37.0
     ports:
