Upgrade cube, respects CUBE_CELERY_POLL_INTERVAL

--- a/secrets.env
+++ b/secrets.env
@@ -1,4 +1,5 @@
 DJANGO_SETTINGS_MODULE=config.settings.production
+CUBE_CELERY_POLL_INTERVAL=5.0
 DJANGO_ALLOWED_HOSTS=*
 DJANGO_SECRET_KEY=secret
 DJANGO_CORS_ALLOW_ALL_ORIGINS=true
