--- a/provisioning/datasources/automatic.yml
+++ b/provisioning/datasources/automatic.yml
@@ -1,6 +1,6 @@
 apiVersion: 1
 datasources:
-  - name: Postgres
+  - name: PostgresChrisDB
     type: postgres
     url: chris_db:5432
     database: chris
@@ -11,3 +11,14 @@ datasources:
       connMaxLifetime: 14400 # Grafana v5.4+
     secureJsonData:
       password: chris1234
+  - name: PostgresChrisStoreDB
+    type: postgres
+    url: chris_store_db:5432
+    database: chris_store
+    user: chris
+    jsonData:
+      maxOpenConns: 0 # Grafana v5.4+
+      maxIdleConns: 2 # Grafana v5.4+
+      connMaxLifetime: 14400 # Grafana v5.4+
+    secureJsonData:
+      password: chirs1234
