Added prometheus as datasource
Signed-off-by: MdSahil-oss <Mohdssahil1@gmail.com>

--- a/provisioning/datasources/automatic.yml
+++ b/provisioning/datasources/automatic.yml
@@ -12,3 +12,13 @@ datasources:
       sslmode: 'disable'
     secureJsonData:
       password: chris1234
+  - name: Prometheus
+    type: prometheus
+    # Access mode - proxy (server in the UI) or direct (browser in the UI).
+    access: proxy
+    url: http://prometheus:9090
+    jsonData:
+      httpMethod: POST
+      manageAlerts: true
+      prometheusType: Prometheus
+      prometheusVersion: 2.37.0
