--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -284,8 +284,7 @@ services:
       monitoring:
     volumes:
       - grafana_data:/var/lib/grafana
-      - ./grafana.ini:/etc/grafana/grafana.ini:ro
-      - ./provisioning:/etc/grafana/provisioning:ro
+      - ./grafana:/etc/grafana:ro
   prometheus:
     image: quay.io/prometheus/prometheus:v2.37.0
     ports:
